--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ plugins:
   - jekyll-regex-replace
 
 # SEO相关信息
-title: TMaize Blog
-description: TMaize的个人博客
+title: YC's Blog
+description: YC's Blog
 keywords: TMaize,Blog,Java,Html,JavaScript
 author: TMaize
-footerText: 'Copyright © 2016 皖ICP备16016174号'
+footerText: ''
 
 # 这些不要动
 permalink: /posts/:year/:month/:day/:title.html
@@ -44,7 +44,7 @@ menu:
     url: /pages/about.html
 
 # 点击页面文字冒出特效,不需要请设置为false
-extClickEffect: true
+extClickEffect: false
 
 # Google Adsense,不需要请设置为false
 # _includes/ext-adsense.html 里面修改为自己的配置
@@ -54,7 +54,7 @@ extAdsense: false
 extMath: false
 
 # 显示访问量统计，由不蒜子提供服务
-extCount: false
+extCount: true
 
 # 友情链接
 # links:
